--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,6 +5,22 @@ permalink: /talks/
 author_profile: true
 ---
 
+Fernandes, D. V. (2023, December). Enabling a Secure Peer-to-Peer (P2P) Electricity Market in Low Voltage Networks. Presentation at the CMU Portugal Doctoral Symposium 2023, Pittsburgh, USA.
+
+Laboratory of Industrial Ecology and Sustainability Seminar, IN+/IST, Lisbon (October 30, 2020). Presentation: Portuguese Hydrogen Strategy - within the scope of Public (Policy) Intervention and Competition
+
+Urban Analytics IN+ Summer School, Lisbon (July 15-21, 2018) Presentations (lectures) “Data Science and Law” and “Data (Representation, Structures and Sources)”
+
+Ninth International Conference on Complex Systems (ICCS 2018), Cambridge, MA, USA (July 22-27, 2018). Poster: “Portuguese Venture Capital Ecosystem – Visualising actors and investment flows across time”;
+
+Laboratory of Industrial Ecology and Sustainability Seminar, IN+/IST, Lisbon (October 12, 2018). Presentation: “Electricity Market”
+
+The MIT Media Lab (Collective Learning Group) & The Institute for New Economic Thinking Young Scholars Initiative (INET-YSI) Summer Workshop “Innovation, Economic Complexity and Economic Geography”, Cambridge, MA, USA (Aug 5–7, 2018). Presentation “Venture Capital in Portugal. An empirical and contextualised analysis of investment flows and system dynamics.”
+
+Second Annual "Innovation, Economic Complexity and Economic Geography" Workshop, hosted at Utrecht University, the Netherlands (Sept 2-4, 2019). Presentation “Who is (actually) funding “innovative” companies? - An empirical analysis of the role of public competitiveness financing and their interplay with Venture Capital financing, per region for the 2007- 2013 period”
+
+Vieira Fernandes, Diana (July 2018), Portuguese Venture Capital Ecosystem - Visualising actors and investment flows across time, IX International Conference on Complex Systems, Pages 56-79. 
+
 {% if site.talkmap_link == true %}
 
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
