--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,6 +5,8 @@ permalink: /talks/
 author_profile: true
 ---
 
+Diana Vieira Fernandes "Peer-to-Peer (P2P) Electricity Markets for Low Voltage Networks". IEEE SmartGridComm'24 - 2024 IEEE International Conference on Communications, Control, and Computing Technologies for Smart Grids (September 204, Oslo, Norway)
+
 Fernandes, D. V. (2023, December). Enabling a Secure Peer-to-Peer (P2P) Electricity Market in Low Voltage Networks. Presentation at the CMU Portugal Doctoral Symposium 2023, Pittsburgh, USA.
 
 Laboratory of Industrial Ecology and Sustainability Seminar, IN+/IST, Lisbon (October 30, 2020). Presentation: Portuguese Hydrogen Strategy - within the scope of Public (Policy) Intervention and Competition
