--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -21,12 +21,13 @@ author_profile: true
 
 - Second Annual "Innovation, Economic Complexity and Economic Geography" Workshop, hosted at Utrecht University, the Netherlands (Sept 2-4, 2019). Presentation “Who is (actually) funding “innovative” companies? - An empirical analysis of the role of public competitiveness financing and their interplay with Venture Capital financing, per region for the 2007- 2013 period”
 
-{% if site.talkmap_link == true %}
-
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
 {% endif %}
-
+{% include base_path %}
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
+
+
+
+
