--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,32 +1,26 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Talks and Presentations"
 permalink: /talks/
 author_profile: true
 ---
 
-- Diana Vieira Fernandes "Peer-to-Peer (P2P) Electricity Markets for Low Voltage Networks". IEEE SmartGridComm'24 - 2024 IEEE International Conference on Communications, Control, and Computing Technologies for Smart Grids (September 204, Oslo, Norway)
+- Diana Vieira Fernandes, "Peer-to-Peer (P2P) Electricity Markets for Low Voltage Networks." IEEE SmartGridComm 2024 - 2024 IEEE International Conference on Communications, Control, and Computing Technologies for Smart Grids (September 2024, Oslo, Norway).
 
-- Fernandes, D. V. (2023, December). Enabling a Secure Peer-to-Peer (P2P) Electricity Market in Low Voltage Networks. Presentation at the CMU Portugal Doctoral Symposium 2023, Pittsburgh, USA.
+- Fernandes, D. V. (2023, December). *Enabling a Secure Peer-to-Peer (P2P) Electricity Market in Low Voltage Networks*. Presentation at the CMU Portugal Doctoral Symposium 2023, Pittsburgh, USA.
 
-- Laboratory of Industrial Ecology and Sustainability Seminar, IN+/IST, Lisbon (October 30, 2020). Presentation: Portuguese Hydrogen Strategy - within the scope of Public (Policy) Intervention and Competition
+- *Portuguese Hydrogen Strategy - within the scope of Public (Policy) Intervention and Competition*. Presentation at the Laboratory of Industrial Ecology and Sustainability Seminar, IN+/IST, Lisbon (October 30, 2020).
 
-- Urban Analytics IN+ Summer School, Lisbon (July 15-21, 2018) Presentations (lectures) “Data Science and Law” and “Data (Representation, Structures and Sources)”
+- Presentations (lectures) “Data Science and Law” and “Data (Representation, Structures and Sources)” at the Urban Analytics IN+ Summer School, Lisbon (July 15-21, 2018).
 
-- Ninth International Conference on Complex Systems (ICCS 2018), Cambridge, MA, USA (July 22-27, 2018). Poster: “Portuguese Venture Capital Ecosystem – Visualising actors and investment flows across time”;
+- Poster: *Portuguese Venture Capital Ecosystem – Visualizing actors and investment flows across time*. Presented at the Ninth International Conference on Complex Systems (ICCS 2018), Cambridge, MA, USA (July 22-27, 2018).
 
-- Laboratory of Industrial Ecology and Sustainability Seminar, IN+/IST, Lisbon (October 12, 2018). Presentation: “Electricity Market”
+- *Electricity Market*. Presentation at the Laboratory of Industrial Ecology and Sustainability Seminar, IN+/IST, Lisbon (October 12, 2018).
 
-- The MIT Media Lab (Collective Learning Group) & The Institute for New Economic Thinking Young Scholars Initiative (INET-YSI) Summer Workshop “Innovation, Economic Complexity and Economic Geography”, Cambridge, MA, USA (Aug 5–7, 2018). Presentation “Venture Capital in Portugal. An empirical and contextualised analysis of investment flows and system dynamics.”
+- *Venture Capital in Portugal. An Empirical and Contextualized Analysis of Investment Flows and System Dynamics*. Presented at The MIT Media Lab (Collective Learning Group) & The Institute for New Economic Thinking Young Scholars Initiative (INET-YSI) Summer Workshop “Innovation, Economic Complexity and Economic Geography,” Cambridge, MA, USA (August 5–7, 2018).
 
-- Second Annual "Innovation, Economic Complexity and Economic Geography" Workshop, hosted at Utrecht University, the Netherlands (Sept 2-4, 2019). Presentation “Who is (actually) funding “innovative” companies? - An empirical analysis of the role of public competitiveness financing and their interplay with Venture Capital financing, per region for the 2007- 2013 period”
-
-{% endif %}
+- *Who is (actually) funding “innovative” companies? An Empirical Analysis of the Role of Public Competitiveness Financing and Their Interplay with Venture Capital Financing, per Region for the 2007-2013 Period*. Presented at the Second Annual "Innovation, Economic Complexity and Economic Geography" Workshop, Utrecht University, The Netherlands (September 2-4, 2019).
 
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
-
-
-
-
